--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "hono": "^4.8.2",
+    "pinia": "^3.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.7.2",
+    "@cloudflare/workers-types": "^4.20250620.0",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^24.0.3",
     "@vitejs/plugin-vue": "^5.2.3",
