--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     }
   ],
    "compilerOptions": {
+    "types": ["@cloudflare/workers-types"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
