--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,16 +1,16 @@
 {
-  "name": "list-task",
+  "name": "list-tsk2",
   "compatibility_date": "2025-05-05",
   "assets": {
    "not_found_handling" : "single-page-application",
    "binding": "ASSETS"
   },
- "main": "src/api/index.ts",
- "d1_databases": [
-  {
+ "main": "./api/index.ts",
+ "d1_databases": [{
     "binding": "DB",
-    "database_name": "list-task",
-    "database_id": "e72bd52d-ac66-4e02-8519-57d330c57423"
+    "database_name": "list-tsk2",
+    "database_id": "39deda43-e9b4-462d-b5af-5e295991c086",
+    "migrations":  "./0001_database.sql"
   }
- ]
-}
+  ]
+  }
