--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.10",
     "hono": "^4.8.2",
     "pinia": "^3.0.3",
+    "tailwindcss": "^4.1.10",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
