--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     }
   ],
    "compilerOptions": {
-    "types": ["@cloudflare/workers-types"],
+    "types": [],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
