--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "^1.7.2",
+    "@cloudflare/vite-plugin": "1.2.0",
     "@cloudflare/workers-types": "^4.20250620.0",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^24.0.3",
@@ -27,6 +27,6 @@
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vue-tsc": "^2.2.10",
-    "wrangler": "^4.20.3"
+    "wrangler": "^4.21.2"
   }
 }
